--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,11 +27,11 @@ layout: default
 
   <section class="profile">
     <div class="profile__card">
-      <div class="profile__img">
+      <!--div class="profile__img">
         <figure class="absolute-bg" style="background-image: url('{{ site.profile_img }}');"></figure>
-      </div>
+      </div-->
       <div class="profile__container">
-        <p>{{ site.profile }}</p>
+        <!--p>{{ site.profile }}</p-->
         {% if site.email or site.social %}
           <ul class="profile__social">
             {% if site.email %}
