--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -194,7 +194,7 @@
     width: 24%;
     clear: none;
     float: left;
-    margin: 3px;
+    margin: 0.5%;
 
     background-color: $color-black;
 
