--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,9 +1,15 @@
 /**
  * Base Variables
  */
+/*
 $font-header: 'Space Mono', monospace;
 $font-body: 'Inconsolata', monospace;
 $font-post: 'Lora', serif;
+*/
+
+$font-header: 'Helvetica','STHeiti';
+$font-body: 'Helvetica','STHeiti';
+$font-post: 'Helvetica','STHeiti';
 
 $color-alpha: #9f8f68;
 $color-alpha--light: #f5f3ef;
