--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,10 @@
   <link rel="stylesheet" href="/assets/css/font-awesome.min.4.6.3.css">
 
   <link rel="stylesheet" href="/assets/css/normalize.min.4.2.0.css">
+
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
+
+  <link href="/assets/css/syntax.css" rel="stylesheet">
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="canonical" href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl | prepend: site.url }}">
