--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -507,6 +507,17 @@
   figure > img {
     padding-bottom: 0;
   }
+  code {
+    font-size:0.75em;
+  }
+  ul {
+    font-size:0.8em;
+  }
+  pre {
+    background-color: rgba(27,31,35,0.05);
+    overflow-x: scroll;
+    padding-left: 8px;
+  }
 }
 
 /**
