--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -508,7 +508,8 @@
     padding-bottom: 0;
   }
   code {
-    font-size:0.75em;
+    font-size:0.7em;
+    font-family:"SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   }
   ul {
     font-size:0.8em;
