--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -498,6 +498,9 @@
 
   img {
     padding-bottom: 0.75em;
+    max-width: 100%;
+    width:initial;
+    display:initial;
   }
 
   figure {
@@ -518,6 +521,7 @@
     background-color: rgba(27,31,35,0.05);
     overflow-x: scroll;
     padding-left: 8px;
+    line-height: 1.4;
   }
 }
 
