--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -54,6 +54,7 @@
     height: 100%;
     width: 100%;
     padding: 2em;
+    text-shadow: 1px 1px 8px grey;
 
     color: $color-white;
 
@@ -406,6 +407,7 @@
     height: 100%;
     width: 90%;
     margin: 0 auto;
+    text-shadow: 1px 1px 8px grey;
   }
 
   h1 {
@@ -626,6 +628,7 @@
     align-items: center;
     justify-content: center;
     height: 100%;
+    text-shadow: 1px 1px 8px grey;
 
     text-align: center;
 
