--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -494,6 +494,10 @@
     font-size: 0.8em;
   }
 
+  p em {
+    font-size: 0.95em;
+  }
+
   a {
     border-bottom: 1px solid $color-alpha;
   }
@@ -519,6 +523,9 @@
   ul {
     font-size:0.8em;
   }
+  ul p{
+    font-size:1em;
+  }
   pre {
     background-color: rgba(27,31,35,0.05);
     overflow-x: scroll;
@@ -526,7 +533,8 @@
     line-height: 1.4;
   }
   blockquote {
-	  color: #646464;
+    color: #646464;
+    font-size: 0.94em;
   }
 }
 
