--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -539,6 +539,18 @@
 }
 
 /**
+ *
+ */
+.comments {
+  margin: 0 auto;
+  width: 90%;
+  padding-bottom: 10px;
+  @media (min-width: $mq-lg) {
+    width: 55%;
+  }
+}
+
+/**
  * Profile Card
  */
 .profile {
