--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,8 @@
   <meta name="twitter:domain" content="{{ site.url }}">
   <meta property="twitter:image" content="{% if page.image %}{{ page.image }}{% else %}{{ site.default_img }}{% endif %}">
 
+  <meta name="referrer" content="never">
+
   <!--link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata|Lora|Space+Mono:700"-->
   <link rel="stylesheet" href="/assets/css/font-awesome.min.4.6.3.css">
 
