--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -538,6 +538,58 @@
   }
 }
 
+.postn{
+  @extend .post;
+  > ul {
+    font-size: 0.9em;
+    margin-top: 16px;
+    list-style: disc;
+    margin-left: 15px;
+    padding-inline-start: 10px;
+    margin-bottom: 10px;
+  }
+  ul ul{
+    font-size: 0.8em;
+    margin-top: 5px;
+    list-style: circle;
+    margin-left: 15px;
+    padding-inline-start: 10px;
+    margin-bottom: 8px;
+  }
+  ul p {
+    margin-bottom: 3px;
+  }
+  h2 {
+    line-height: 1.2;
+    margin-top: 19px;
+    margin-bottom: 19px;
+  }
+  ol{
+    list-style-type: decimal;
+    font-size: 0.8em;
+    padding-inline-start: 33px;
+  }
+  ol p{
+    font-size: 1em;
+  }
+  code.highlighter-rouge{
+    margin-right: 2px;
+    padding-right: 2px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    margin-left: 2px;
+    padding-left: 2px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: 1px solid #dee0e3;
+    background-color: rgba(27,31,35,0.05);
+    font-size: 0.9em;
+  }
+  pre{
+    margin-left: 10px;
+  }
+}
+
 /**
  *
  */
