--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -588,6 +588,37 @@
   pre{
     margin-left: 10px;
   }
+
+  #markdown-toc {
+    position: fixed;
+        position: fixed;
+        background-color: white;
+        /* width: 100%; */
+        max-width: 54em;
+        margin: 0 auto;
+        overflow: scroll;
+        margin-left: 1px;
+        /* padding-left: 39px;
+        padding-top: 30px; */
+        padding:30px;
+        bottom: 30px;
+        max-height: 90%;
+        border: 1px solid #aaa;
+        display:none;
+    }
+    .toc-button{
+    position: fixed;
+        height: 30px;
+        width: 30px;
+        bottom: 3px;
+        z-index: 10;
+        margin-left: -29px;
+        cursor: pointer;
+        opacity: 0.4;
+    }
+    .toc-button:hover{
+          opacity: 1;
+    }
 }
 
 /**
