添加支持路径前缀

--- a/_includes/gallery-tab.html
+++ b/_includes/gallery-tab.html
@@ -2,7 +2,7 @@
   <ul class="galleries">
     {% for post in site.categories.Gallery %}
       <li class="gallery">
-	    <a class="gallery__link" href="{{ post.url }}">
+	    <a class="gallery__link" href="{{ post.url | prepend: site.baseurl }}">
           {% for thumb in post.thumbs %}
             <div class="gallery__img">
 				<figure class="absolute-bg" style="background-image: url('{{ thumb }}');"></figure>
