--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,2 @@
-<script type="text/javascript" src="/assets/js/wow.min.1.1.2.js"></script>
-<script type="text/javascript" src="{{ '/assets/js/app.js' | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/wow.min.1.1.2.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/app.js"></script>
