--- a/_layouts/post_n.html
+++ b/_layouts/post_n.html
@@ -23,7 +23,7 @@ layout: default
 
   <section class="section-padding postn" itemprop="articleBody">
     <div class="toc-button">
-      <img src="/assets/images/dir.svg" style="width:100%;height:100%;padding-bottom:0px">
+      <img src="{{ site.baseurl }}/assets/images/dir.svg" style="width:100%;height:100%;padding-bottom:0px">
     </div>
     {{ content }}
   </section>
